# avgdist-rs

./: .gitignore  Cargo.toml  README.md
data/ag/: benchmark-unipair.sh
data/arxiv/: Makefile  arxiv-t.ef  arxiv.graph  arxiv.nodes  arxiv.offsets  arxiv.properties
data/atg/: benchmark-unipair.sh  benchmark.sh
data/barabasi/: 10k-10m-t.ef  10k-10m-t.graph  10k-10m-t.offsets  10k-10m-t.properties  10k-10m.csv  10k-10m.ef  10k-10m.graph  10k-10m.offsets  10k-10m.properties  1k-10m-t.ef  1k-10m-t.graph  1k-10m-t.offsets  1k-10m-t.properties  1k-10m.csv  1k-10m.ef  1k-10m.graph  1k-10m.offsets  1k-10m.properties  2k-10m-t.ef  2k-10m-t.graph  2k-10m-t.offsets  2k-10m-t.properties  2k-10m.csv  2k-10m.ef  2k-10m.graph  2k-10m.offsets  2k-10m.properties  5k-10m-t.ef  5k-10m-t.graph  5k-10m-t.offsets  5k-10m-t.properties  5k-10m.csv  5k-10m.ef  5k-10m.graph  5k-10m.offsets  5k-10m.properties  Makefile  generate.py
data/brightkite/: Makefile  brightkite-t.graph  brightkite.ef  brightkite.nodes  brightkite.offsets  brightkite.properties
data/enron/: Makefile  enron-t.ef  enron-t.offsets  enron-t.properties  enron.graph  enron.nodes
data/epinions/: Makefile  epinions-t.ef  epinions-t.graph  epinions-t.offsets  epinions-t.properties  epinions.ef  epinions.graph  epinions.nodes  epinions.offsets  epinions.properties
data/erdos-renyi/: 1k-0.001p.csv  1k-0001p-t.graph  1k-0001p-t.offsets  1k-0001p-t.properties  1k-0001p.ef  1k-0001p.graph  1k-0001p.offsets  1k-0001p.properties  2k-0.001p.csv  (+26 more)
results/: bit-count.txt  bit-dist.txt  out.txt
src/: lib.rs  main.rs  main.rs.new
(+212 files in other folders)
